ajout des boites de dialogue de connexion

--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -7,3 +7,7 @@
  *
  * Variables and Mixins are to be imported first to be reused in the whole code and for easier modification.
  */
+
+@import '../bower_components/bootstrap/scss/bootstrap.scss';
+
+
