--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,11 +31,50 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
+    <link rel="stylesheet" href="/bower_components/ng-dialog/css/ngDialog.min.css">
+    <link rel="stylesheet" href="/bower_components/ng-dialog/css/ngDialog-theme-default.css">
+    <link rel="stylesheet" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/creative.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/site.css">
     <!--STYLES END-->
   </head>
   <body>
-    <%- body %>
+
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="/">Home</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#download">Download</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#features">Features</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/connection">Connection</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    
+    <div ng-app="App">
+        <%- body %>
+    </div>
     <!--
         Client-side Templates
         ========================
@@ -88,12 +127,19 @@
     <!--SCRIPTS-->
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="/bower_components/ng-dialog/js/ngDialog.min.js"></script>
     <script src="/bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
     <script src="/js/app.js"></script>
-    <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/js/AppCtrl.js"></script>
     <script src="/js/AppCtrl2.js"></script>
+    <script src="/js/ConnectionHelpController.js"></script>
+    <script src="/js/ConnectionRefController.js"></script>
+    <script src="/js/HomeCtrl.js"></script>
+    <script src="/js/InsideDialogCtrl.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/jquery.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
