--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -1,4 +1,7 @@
 body {
   background-image: url('/img/header.jpg');
   background-size: cover;
+  overflow-y: hidden;
+  background-repeat: no-repeat;
+  background-color: white;
 }
