--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -56,6 +56,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="/webgl">WebGL</a>
+                    </li>
                 <%if (req.user) { %>
                     <li>
                         <a class="page-scroll" href="/profil">Profil</a>
@@ -134,9 +137,14 @@
     <script src="/js/AppCtrl.js"></script>
     <script src="/js/AppCtrl2.js"></script>
     <script src="/js/HomeCtrl.js"></script>
+    <script src="/js/IndiceTemps.js"></script>
     <script src="/js/InsideDialogCtrl.js"></script>
+    <script src="/js/glMatrix-0.9.5.min.js"></script>
+    <script src="/js/jquery-3.1.1.js"></script>
     <script src="/js/jquery.js"></script>
     <script src="/js/jquery.min.js"></script>
+    <script src="/js/jquery.simpleWeather.min.js"></script>
+    <script src="/js/webgl-utils.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
