--- a/views/webgl.ejs
+++ b/views/webgl.ejs
@@ -417,9 +417,9 @@ void main()// out vec4 fragColor, in vec2 fragCoord )
   }
 </script>
 
-<script type="text/javascript" src="jquery-3.1.1.js"></script>
-<script type="text/javascript" src="bower_components/simpleWeather/jquery.simpleWeather.min.js"></script>
-<script src="IndiceTemps.js"></script>
+<script type="text/javascript" src="/js/jquery-3.1.1.js"></script>
+<script type="text/javascript" src="/bower_components/simpleWeather/jquery.simpleWeather.min.js"></script>
+<script src="/js/IndiceTemps.js"></script>
 
 <script type="text/javascript">
 
